@@ -59,7 +59,7 @@ public class Main {
 
         ClassLoader classLoader = AgentClassLoader.initialize(agentDirectory);
         Class<?> starterClass = classLoader.loadClass("org.bithon.agent.core.starter.AgentStarter");
-        Object starterObject = starterClass.newInstance();
+        Object starterObject = starterClass.getDeclaredConstructor().newInstance();
         Method startMethod = starterClass.getDeclaredMethod("start",
                                                             String.class,
                                                             Instrumentation.class);
@@ -80,7 +80,6 @@ public class Main {
                            + " \\ \\   __  \\ \\  \\   \\ \\  \\ \\ \\   __  \\ \\  \\\\\\  \\ \\  \\\\ \\  \\  \n"
                            + "  \\ \\  \\|\\  \\ \\  \\   \\ \\  \\ \\ \\  \\ \\  \\ \\  \\\\\\  \\ \\  \\\\ \\  \\ \n"
                            + "   \\ \\_______\\ \\__\\   \\ \\__\\ \\ \\__\\ \\__\\ \\_______\\ \\__\\\\ \\__\\\n"
-                           + "    \\|_______|\\|__|    \\|__|  \\|__|\\|__|\\|_______|\\|__| \\|__|\n"
-                           + "                                                             ");
+                           + "    \\|_______|\\|__|    \\|__|  \\|__|\\|__|\\|_______|\\|__| \\|__|");
     }
 }
